--- a/microkernel-kernel/pom.xml
+++ b/microkernel-kernel/pom.xml
@@ -40,6 +40,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>br.univille</groupId>
+			<artifactId>microkernel-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>br.univille</groupId>
+			<artifactId>microkernel-plugin</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
